Enable deprecation warnings
And fix usage of Class.newInstance(), deprecated since Java 9

Change-Id: I3bc4a4b2354cc978dc934c7b29cff7a87ab90bc9